gen/redis/v1beta1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-redis1_beta1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/redis/v1beta1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
   --> gen/redis/v1beta1/lib/src/lib.rs:834:13
    |
834 |             locations::LocationsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `instances::InstancesActions`
   --> gen/redis/v1beta1/lib/src/lib.rs:887:17
    |
887 |                 instances::InstancesActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instances::InstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
   --> gen/redis/v1beta1/lib/src/lib.rs:891:17
    |
891 |                 operations::OperationsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-redis1_beta1`.

To learn more, run the command again with --verbose.
